[docs] fixed errors of code snippets being too wide

--- a/docs/source/_static/pymor.css
+++ b/docs/source/_static/pymor.css
@@ -10,7 +10,11 @@
 }
 
 .output.text_html {
-    display: inline-block;
+    display: inline;
+}
+
+.output.text_html div:last-child {
+    float: none !important;
 }
 
 .md-header {
